/*
 * Copyright 2017 LINE Corporation
 *
 * LINE Corporation licenses this file to you under the Apache License,
 * version 2.0 (the "License"); you may not use this file except in compliance
 * with the License. You may obtain a copy of the License at:
 *
 *   https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 * License for the specific language governing permissions and limitations
 * under the License.
 */
/*
 * MIT License
 *
 * Copyright (c) 2017 Choko (choko@curioswitch.org)
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all
 * copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 */

syntax = "proto3";

package armeria;

option java_package = "com.linecorp.armeria.grpc";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message User {

    enum Type {
        Unknown = 0;
        User = 1;
        Organization = 2;
    }

    string login = 1;
    uint32 id = 2;
    string avatar_url = 3;
    string gravatar_id = 4;
    string url = 5;
    string html_url = 6;
    string followers_url = 7;
    string following_url = 8;
    string gists_url = 9;
    string starred_url = 10;
    string subscriptions_url = 11;
    string organizations_url = 12;
    string repos_url = 13;
    string events_url = 14;
    string received_events_url = 15;
    Type type = 16;
    bool site_admin = 17;
}

message SearchResponse {
    int32 total_count = 1;
    bool incomplete_results = 2;

    message Item {
        uint32 id = 1;
        string name = 2;
        string full_name = 3;
        User owner = 4;
        bool private = 5;
        string html_url = 6;
        string description = 7;
        bool fork = 8;
        string url = 9;
        string forks_url = 10;
        string keys_url = 11;
        string collaborators_url = 12;
        string teams_url = 13;
        string hooks_url = 14;
        string issue_events_url = 15;
        string events_url = 16;
        string assignees_url = 17;
        string branches_url = 18;
        string tags_url = 19;
        string blobs_url = 20;
        string git_tags_url = 21;
        string git_refs_url = 22;
        string trees_url = 23;
        string statuses_url = 24;
        string languages_url = 25;
        string stargazers_url = 26;
        string contributors_url = 27;
        string subscribers_url = 28;
        string subscription_url = 29;
        string commits_url = 30;
        string git_commits_url = 31;
        string comments_url = 32;
        string issue_comment_url = 33;
        string contents_url = 34;
        string compare_url = 35;
        string merges_url = 36;
        string archive_url = 37;
        string downloads_url = 38;
        string issues_url = 39;
        string pulls_url = 40;
        string milestones_url = 41;
        string notifications_url = 42;
        string labels_url = 43;
        string releases_url = 44;
        string deployments_url = 45;
        google.protobuf.Timestamp created_at = 46;
        google.protobuf.Timestamp updated_at = 47;
        google.protobuf.Timestamp pushed_at = 48;
        string git_url = 49;
        string ssh_url = 50;
        string clone_url = 51;
        string svn_url = 52;
        string homepage = 53;
        uint32 size = 54;
        uint32 stargazers_count = 55;
        uint32 watchers_count = 56;
        // Note: Maybe this is an enum.
        string language = 57;
        bool has_issues = 58;
        bool has_projects = 59;
        bool has_downloads = 60;
        bool has_wiki = 61;
        bool has_pages = 62;
        uint32 forks_count = 63;
        string mirror_url = 64;
        uint32 open_issues_count = 65;
        uint32 forks = 66;
        uint32 open_issues = 67;
        uint32 watchers = 68;
        string default_branch = 69;
        float score = 70;
    }
    repeated Item items = 3;
}

service GithubService {
    rpc Simple (SearchResponse) returns (SearchResponse);

    rpc Empty (google.protobuf.Empty) returns (google.protobuf.Empty);
}
